2002-07-27  Andrew Csillag  <drew@localhost.localdomain>

	* util/make_distr.py (doc_cmds): made it so that it builds the
	documentation before tarring everything up

2002-07-25  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/sample_webdocs/demo/geeknews/index.html: commented out
	lwn related stuff as it is closing it's doors on 8/1/02

	* configure, configure.in: added stuff pertaining to --with-runasroot

	* SkunkWeb/skunkweb.py.in: put in safety check so that if skunkweb
	is started by root, and the installation owner is not root and
	userToRunAs is *not* set, we refuse to run.

	* SkunkWeb/swmgr.in: added -r option so you can make it as if you
	specified --with-runasroot during configuration

	* SkunkWeb/sw.conf.in: made it so that if you specify --with-runasroot,
	it will auto-set the userToRunAs and groupToRunAs

	* pylibs/Logger.py (logException): now adds exception info

	* SkunkWeb/SkunkWeb/bootloader.py.in (_stupidfunc): added pwd and grp
	so they don't get whacked on restart

	* SkunkWeb/sw.conf.in: added docs for userToRunAs and groupToRunAs

	* SkunkWeb/skunkweb.py.in: now switches euid/egid as appropriate

	* SkunkWeb/SkunkWeb/Server.py (addService): made it do uid switching

	* SkunkWeb/configure.in, SkunkWeb/configure:  added stuff to support 
	--with-runasroot

	* SkunkWeb/swmgr.in: added stuff to support --with-runasroot

	* SkunkWeb/util/cache_reaper.py.in:  changed @prefix@/cache to @CACHE@
	
2002-07-25  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/pycgi.py (_processRequest): d'oh! was raising
	a PreemptiveResponse in a hook that doesn't expect such a thing
	and treats it as an error.

2002-07-23  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/constants.py (PYCGI_JOB): added constant for
	pycgi service.

	* SkunkWeb/Services/pycgi.py: start of pycgi service.  Doesn't
	contain subinterpreter module, has barely been tested so far,
	doesn't deal with sys.argv correctly, etc.
